--- a/style.css
+++ b/style.css
@@ -4,7 +4,16 @@
     box-sizing: border-box;
 }
 
+:root {
+    --grey-100: #F0F2F5;
+    --grey-300: #D0D5DD;
+    --grey-400: #98A2B3;
+    --primary-500: #0D5EBA;
+    --primary-600: #034592;
+}
+
 body {
+    background-color: var(--grey-100);
     font-family: 'Open Sans', 'San-serif', 'Roboto';
     margin: 0;
     display: flex;
@@ -15,5 +24,76 @@ body {
 }
 
 .container {
-    
+    text-align: center;
+}
+
+.progressContainer {
+    max-width: 100%;
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+
+}
+
+.progressContainer::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    background-color: var(--grey-300);
+    transform: translateY(-50%);
+    top: 50%;
+    left: 0;
+    height: 5px;
+    z-index: -1;
+}
+
+.progress{
+    position: absolute;
+    width: 0%;
+    background-color: var(--primary-500);
+    transform: translateY(-50%);
+    top: 50%;
+    left: 0;
+    height: 5px;
+    z-index: -1;
+    transition: .5s ease .4ms;
+}
+
+.pagination{
+    background-color: white;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid var(--grey-300);
+    transition: 0.4s ease-in;
+}
+
+.pagination.active{
+    border: 1.5px solid var(--primary-500);
+}
+
+.btn {
+    cursor: pointer;
+    color: white;
+    background-color: var(--primary-500);
+    font-size: 16px;
+    padding: 16px 48px;
+    border: none;
+    border-radius: 4px;
+}
+
+.btn:hover {
+    background-color: var(--primary-600);
+    border: 3px solid var(--primary-600);
+    transition: 40ms ease;
+}
+
+.btn:disabled {
+    background-color: var(--grey-400);
+    cursor: not-allowed;
+    border: 0px;
 }
