--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ body {
     background-color: var(--primary-500);
     font-size: 16px;
     padding: 16px 48px;
+    margin: 8px;
     border: none;
     border-radius: 4px;
 }
