--- a/style.css
+++ b/style.css
@@ -98,3 +98,9 @@ body {
     cursor: not-allowed;
     border: 0px;
 }
+
+@media (max-width: 480px) {
+    .container{
+        width: 80vw;
+    }
+}
